--- a/src/KarveCommonInterfaces/KarveCar.CommonInterfaces.csproj
+++ b/src/KarveCommonInterfaces/KarveCar.CommonInterfaces.csproj
@@ -60,10 +60,12 @@
     <Compile Include="IInteractionRequestController.cs" />
     <Compile Include="ILinqToTree.cs" />
     <Compile Include="IRegionManagerAware.cs" />
+    <Compile Include="ISqlValidationRule.cs" />
     <Compile Include="IValidationChain.cs" />
     <Compile Include="MessageDialogResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectionState.cs" />
+    <Compile Include="ValidationChain.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
