--- a/src/Modules/ToolBarModule/ToolBarModule.csproj
+++ b/src/Modules/ToolBarModule/ToolBarModule.csproj
@@ -140,6 +140,7 @@
     <EmbeddedResource Include="Properties\Resources.ca-ES.resx" />
     <EmbeddedResource Include="Properties\Resources.en-GB.resx" />
     <EmbeddedResource Include="Properties\Resources.es-ES.resx" />
+    <EmbeddedResource Include="Properties\Resources.it-IT.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -155,6 +156,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\KarveCommonInterfaces\KarveCar.CommonInterfaces.csproj">
+      <Project>{E9C77593-B656-45DA-BAE1-91AF97491069}</Project>
+      <Name>KarveCar.CommonInterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\KarveLocale\KarveCar.Locale.csproj">
+      <Project>{d1d7504f-994c-42fb-a78f-b6078f460f7f}</Project>
+      <Name>KarveCar.Locale</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DALModule\KarveDataAccessLayer.csproj">
       <Project>{140c1044-4f56-4855-af52-a2f91b369460}</Project>
       <Name>KarveDataAccessLayer</Name>
