--- a/src/Modules/InvoiceModule/InvoiceModule.csproj
+++ b/src/Modules/InvoiceModule/InvoiceModule.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Behaviour\Ext.cs" />
     <Compile Include="Behaviour\KarveGridCopyPaste.cs" />
     <Compile Include="Behaviour\LineGridBehaviour.cs" />
+    <Compile Include="Common\InvoiceHelpers.cs" />
     <Compile Include="GridCellConverter.cs" />
     <Compile Include="ViewModels\GenericGridViewModel.cs" />
     <Compile Include="ViewModels\GridLoadException.cs" />
