--- a/test/KarveTest/KarveTest/packages.config
+++ b/test/KarveTest/KarveTest/packages.config
@@ -8,7 +8,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="ExtendedXmlSerializer" version="1.5.0" targetFramework="net461" />
   <package id="iAnywhere.Data.SQLAnywhere.v4.5" version="16.0.0.20433" targetFramework="net461" />
-  <package id="Moq" version="4.7.145" targetFramework="net461" />
+  <package id="Moq" version="4.8.2" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="NUnit.Console" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
@@ -24,6 +24,8 @@
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="ReportGenerator" version="3.0.2" targetFramework="net461" />
   <package id="Sap.Data.SQLAnywhere.EF6" version="17.0.7.3399" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="TestStack.White" version="0.13.3" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
