--- a/src/app.config
+++ b/src/app.config
@@ -150,6 +150,14 @@
         <assemblyIdentity name="iAnywhere.Data.SQLAnywhere.v4.5" publicKeyToken="f222fc4333e0d400" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-16.0.0.19484" newVersion="16.0.0.19484" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.108.0" newVersion="1.0.108.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
