--- a/src/Modules/MasterModule/packages.config
+++ b/src/Modules/MasterModule/packages.config
@@ -2,10 +2,16 @@
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Expression.Blend.Sdk.WPF" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
-  <frameworkAssembly assemblyName="System.Windows.Interactivity" targetFramework="net40,net45,sl5,wp8" />
 </packages>
