Fixed JIRA KAR-3 Reservation Fixed JIRA KAR-8 Expire date in client credit card not working

--- a/test/KarveTest/KarveCar.Integration/KarveCar.Integration.csproj
+++ b/test/KarveTest/KarveCar.Integration/KarveCar.Integration.csproj
@@ -90,6 +90,7 @@
     <Compile Include="MockRegionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBookingControlViewModel.cs" />
+    <Compile Include="TestClientInfoViewModel.cs" />
     <Compile Include="TestIntegrationBase.cs" />
     <Compile Include="TestInvoiceInfoViewModel.cs" />
     <Compile Include="ToolbarIntegrationTests.cs" />
