modified:   KarveDapper/KarveDapper.csproj 	modified:   KarveDapper/packages.config 	modified:   README.md 	modified:   src/Controls/KarveControls/KarveCar.Controls.csproj 	modified:   src/Controls/KarveControls/packages.config 	modified:   src/KarveCar.Navigation/KarveCar.Navigation.csproj 	modified:   src/KarveCar.NavigationInterface/KarveCar.NavigationInterface.csproj 	modified:   src/KarveCar.csproj 	modified:   src/KarveCar.sln 	modified:   src/KarveCommon/KarveCar.Common.csproj 	modified:   src/KarveCommon/packages.config 	modified:   src/KarveLocale/KarveCar.Locale.csproj 	modified:   src/Modules/BookingModule/BookingModule.csproj 	modified:   src/Modules/DALModule/KarveDataAccessLayer.csproj 	modified:   src/Modules/DALModule/KarveDataServices/IAssistMapper.cs 	modified:   src/Modules/DALModule/KarveDataServices/KarveDataServices.csproj 	modified:   src/Modules/DALModule/KarveDataServices/packages.config 	modified:   src/Modules/DALModule/README.md 	modified:   src/Modules/HelperModule/HelperModule.csproj 	modified:   src/Modules/HelperModule/packages.config 	modified:   src/Modules/MasterModule/MasterModule.csproj 	modified:   src/Modules/MasterModule/packages.config 	modified:   src/Views/GrupoVehiculoDataGridUserControl.xaml 	modified:   src/Views/GrupoVehiculoUserControl.xaml 	modified:   src/Views/MarcaDataGridUserControl.xaml 	modified:   src/Views/ProveedorMarcaDataGridUserControl.xaml 	modified:   src/Views/TipoVehiculoDataGridUserControl.xaml 	modified:   test/KarveTest/KarveTest/KarveCar.UnitTest.csproj 	modified:   test/KarveTest/KarveTest/app.config 	modified:   test/KarveTest/KarveTest/packages.config

--- a/src/KarveLocale/KarveCar.Locale.csproj
+++ b/src/KarveLocale/KarveCar.Locale.csproj
@@ -12,6 +12,9 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
+  <PropertyGroup>
+      <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
