--- a/KarveDapper/packages.config
+++ b/KarveDapper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.Extension" version="1.0.0.1" targetFramework="net461" />
+  <package id="iAnywhere.Data.SQLAnywhere.v4.5" version="16.0.0.19484" targetFramework="net461" />
 </packages>
