--- a/src/KarveCommon/packages.config
+++ b/src/KarveCommon/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
+  <package id="iAnywhere.Data.SQLAnywhere.v4.5" version="16.0.0.19484" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NLog" version="4.4.12" targetFramework="net45" />
+  <package id="NLog" version="4.5.7" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
 </packages>
