--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -1165,7 +1165,6 @@
     <Compile Include="FilterService\DataFilterService.cs" />
     <Compile Include="FilterService\DataFilterSummaryService.cs" />
     <Compile Include="GruposDAL.cs" />
-    <Compile Include="IDataAccessLayer.cs" />
     <Compile Include="InvoiceDataServices.cs" />
     <Compile Include="Logic\ClientDtoToClientes1.cs" />
     <Compile Include="Logic\ClientDtoToClientes2.cs" />
@@ -1244,7 +1243,7 @@
     <None Include="providers.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="READ.ME" />
+    <None Include="README.md" />
     <None Include="SqlMap.config">
       <SubType>Designer</SubType>
     </None>
