--- a/src/Modules/DALModule/KarveDataServices/packages.config
+++ b/src/Modules/DALModule/KarveDataServices/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="CreditCardValidator" version="1.4.1" targetFramework="net461" />
   <package id="EmailValidation" version="1.0.3" targetFramework="net461" />
+  <package id="iAnywhere.Data.SQLAnywhere.v4.5" version="16.0.0.19484" targetFramework="net461" />
   <package id="IBAN4Net" version="1.0.6" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
