--- a/src/Modules/MasterModule/packages.config
+++ b/src/Modules/MasterModule/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Expression.Blend.Sdk.WPF" version="1.0.1" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
