--- a/test/KarveTest/KarveTest/packages.config
+++ b/test/KarveTest/KarveTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
@@ -25,7 +26,7 @@
   <package id="ReportGenerator" version="3.0.2" targetFramework="net461" />
   <package id="Sap.Data.SQLAnywhere.EF6" version="17.0.7.3399" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="TestStack.White" version="0.13.3" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
