modified:   KarveDapper/KarveDapper.csproj 	modified:   src/KarveCar.Navigation/KarveCar.Navigation.csproj 	modified:   src/KarveCar.NavigationInterface/KarveCar.NavigationInterface.csproj 	modified:   src/KarveCar.csproj 	modified:   src/KarveCommon/KarveCar.Common.csproj 	deleted:    src/KarveCommonInterfaces/IPayloadFactory.cs 	deleted:    src/KarveCommonInterfaces/IViewNavigatorFactory.cs 	modified:   src/KarveCommonInterfaces/KarveCar.CommonInterfaces.csproj 	modified:   src/KarveLocale/KarveCar.Locale.csproj 	modified:   src/Modules/BookingModule/BookingModule.csproj 	modified:   src/Modules/HelperModule/HelperModule.csproj 	modified:   src/Modules/InvoiceModule/InvoiceModule.csproj 	modified:   src/Modules/MasterModule/MasterModule.csproj 	modified:   src/Modules/ToolBarModule/ToolBarModule.csproj 	modified:   src/Views/GrupoVehiculoDataGridUserControl.xaml 	modified:   src/Views/MainWindow.xaml 	modified:   src/Views/MarcaDataGridUserControl.xaml

--- a/src/KarveCar.Navigation/KarveCar.Navigation.csproj
+++ b/src/KarveCar.Navigation/KarveCar.Navigation.csproj
@@ -15,7 +15,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup>
-      <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
+      <RuntimeIdentifiers>win</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
