--- a/src/KarveCommonInterfaces/KarveCar.CommonInterfaces.csproj
+++ b/src/KarveCommonInterfaces/KarveCar.CommonInterfaces.csproj
@@ -11,6 +11,10 @@
     <AssemblyName>KarveCommonInterfaces</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+  </PropertyGroup>
+  <PropertyGroup>
+      <RuntimeIdentifiers>win</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
