- Added new magnifier and relative object to the booking info view model. - Added booking info view model to Bootstrapper.cs - Deleted MainWindow1.xaml - Added new strings to localize. - Added a new navigator factory.

--- a/src/KarveCar.Navigation/KarveCar.Navigation.csproj
+++ b/src/KarveCar.Navigation/KarveCar.Navigation.csproj
@@ -16,7 +16,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup>
-      <RuntimeIdentifiers>win</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -83,8 +83,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelperNavigator.cs" />
     <Compile Include="KarveNavigator.cs" />
     <Compile Include="KarveNavigatorFactory.cs" />
+    <Compile Include="NavigateView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -158,6 +160,11 @@
       <Project>{59b99363-3561-4b1f-94fb-136becbaa675}</Project>
       <Name>MasterModule</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>6.2.2</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
